substrate/primitives/api/test/tests/ui/missing_block_generic_parameter.stderr
error: Missing `Block` generic parameter.
  --> tests/ui/missing_block_generic_parameter.rs:29:13
   |
29 |     impl self::Api for Runtime {
   |                ^^^
